1. #2193 - Review FNA - Nature of business and occupation spacing 2. FNA Recommendation Fix - Case 3 Type 1 - Comment logic to filter unaffordable in Type 1 msg

--- a/src/main/webapp/resources/css/onlinesavieFNA/onlinesavieFNAReview.css
+++ b/src/main/webapp/resources/css/onlinesavieFNA/onlinesavieFNAReview.css
@@ -78,7 +78,7 @@
   width: 100% !important;
   background-color: #FFF; }
   #FNAReview #personal_info .select2-container .select2-selection--single {
-    padding: 8px 22px;
+    padding: 8px 22px 8px 15px;
     height: auto;
     border: none; }
 #FNAReview #personal_info .select2-container--default .select2-selection--single .select2-selection__arrow b {
